# cpplox

./: .gitignore  CMakeLists.txt  compile_commands.json
examples/: testScanner.lox  tokens.lox
src/: CMakeLists.txt  literal.h  lox.cpp  lox.h  main.cpp  scanner.h  token.cpp  token.h  tokentype.cpp  tokentype.h
tests/: CMakeLists.txt  test.cpp
